update thesis methods

--- a/presentation_report/thesis/biblio.bib
+++ b/presentation_report/thesis/biblio.bib
@@ -340,6 +340,20 @@ year = {2018}
 }
 
 
+
+
+
+@misc{zheng2018,
+      title={DAGs with NO TEARS: Continuous Optimization for Structure Learning}, 
+      author={Xun Zheng and Bryon Aragam and Pradeep Ravikumar and Eric P. Xing},
+      year={2018},
+      eprint={1803.01422},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML},
+      url={https://arxiv.org/abs/1803.01422}, 
+}
+
+
 @article{curth2024,
 author = {Curth, Alicia and Peck, Richard W. and McKinney, Eoin and Weatherall, James and van der Schaar, Mihaela},
 title = {Using Machine Learning to Individualize Treatment Effect Estimation: Challenges and Opportunities},
