--- a/presentation_report/thesis/header.sty
+++ b/presentation_report/thesis/header.sty
@@ -9,6 +9,8 @@
 \usepackage{booktabs}  % needed for table?
 \usepackage{tabularx}  % needed for table?
 \usepackage{tikz}     % needed for plot of MA and DAG (methods Experiment 1)
+\usepackage{algorithmicx} % needed for algorithms
+\usepackage{algorithm} % needed for algorithms
 
 
 
