--- a/presentation_report/thesis/msc_report.tex
+++ b/presentation_report/thesis/msc_report.tex
@@ -76,6 +76,32 @@ advantages and limitation of this framework and provide an outlook.
 \addtocontents{toc}{\protect \vspace*{10mm}}
 
 \cleardoublepage
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+
+
+\chapter*{Abstract}
+\addtocontents{toc}{\protect \vspace*{13.mm}}
+\addcontentsline{toc}{chapter}{\bfseries{Abstract}}
+\thispagestyle{plain}\markboth{Abstract}{Abstract}
+
+Abstract here
+
+\bigskip
+
+\noindent\textbf{Keywords:} Neural Causal Models (TRAM-DAGs), Structural Causal Models, Counterfactuals, Transfrmation Models, Observational Data, Heterogeneous Treatment Effects, Individualized Treatment Effects (ITE), Conditional Average Treatment Effects (CATE)
+
+
+
+
+\addtocontents{toc}{\protect \vspace*{10mm}}
+
+\cleardoublepage
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+
 \pagenumbering{arabic}
 
 
